--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
           <!-- Add logos of the clients or companies you'have worked with. -->
           <img src="./images/client-1.png" class="client__logo" alt="Company 2" />
 
+        <img src="./images/client-2.png" class="client__logo" alt="Company 3" />
         </div>
       </div>
     </section>
@@ -199,7 +200,7 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:seb.frampton@gmail.com" class="btn">seb.frampton@gmail.com</a>
       </div>
     </div>
   </section>
