--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <!-- Add logos of the clients or companies you'have worked with. -->
           <img src="./images/client-1.png" class="client__logo" alt="Company 2" />
 
-        <img src="./images/client-2.png" class="client__logo" alt="Company 3" />
+        <img src="./images/client-2.jpg" class="client__logo" alt="Company 3" />
         </div>
       </div>
     </section>
