--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
       <p>
-        &copy; 2022 - Template redesigned & redeveloped by <a href="https://github.com/sebframpton"
+        &copy; 2022 - by <a href="https://github.com/sebframpton"
           class="link">Sebastian</a>.
       </p>
 
