--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Change background colour</h3>
+              <h3>Change Background Colour</h3>
               <p>
                 Change the colour of the background of the website project.
               </p>
