--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 <body>
 
   <!-- ***** Header ***** -->
-
-  <header class="header" role="banner" id="top">
+<header class="header" role="banner" id="top">
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
@@ -45,18 +44,29 @@
         </ul>
       </nav>
     </div>
+	
+
+
     <div class="header__text-box row">
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Sebastian Frampton</span>
+          <span class="animate-charcter">Sebastian Frampton</span>
         </h1>
+		<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <h1>A Web Developer based in Perth, Western Australia.</h1>
+    </div>
+  </div>
+</div>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Perth, Western Australia.</p>
+		
         <a href="#contact" class="btn">Get in touch</a>
       </div>
     </div>
   </header>
+
 
   <main role="main">
 
