--- a/index.html
+++ b/index.html
@@ -25,7 +25,31 @@
   <meta name="keywords" content="Sebastian Frampton, HTML CSS JS PHP WordPress and some coding keywords" />
   <link rel="stylesheet" href="index.css" />
 </head>
+<style>
+.title {
 
+	text-align: center;
+	color: #FFF;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 10vh;
+	letter-spacing: 1px;
+	line-height:2
+}
+
+h1 {
+	background-image: url(https://i.gifer.com/ItS.gif);
+	background-size: cover;
+	color: transparent;
+	-moz-background-clip: text;
+	-webkit-background-clip: text;
+	
+	font-size: 40px;
+	margin: 10px 0;
+}
+</style>
 <body>
 
   <!-- ***** Header ***** -->
