--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ h1 {
 </div>
         <!-- Put a small paragraph about yourself -->
 		
-        <a href="#contact" class="btn">Get in touch</a>
+        <a href="#contact" class="btn btn-touch">Get in touch</a>
       </div>
     </div>
   </header>
