--- a/index.html
+++ b/index.html
@@ -159,9 +159,14 @@ h1 {
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Change Background Colour</h3>
+              <h3>Interactive Card Details Form</h3>
               <p>
-                Change the colour of the background of the website project.
+              - Fill in the form and see the card details update in real-time
+- Receive error messages when the form is submitted if:
+  - Any input field is empty
+  - The card number, expiry date, or CVC fields are in the wrong format
+- View the optimal layout depending on their device's screen size
+- See hover, active, and focus states for interactive elements on the page
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -170,10 +175,10 @@ h1 {
               </ul>
 
               <div class="work__links">
-                <a href="https://sebframpton.github.io/Change-bg-colour/" class="link__text">
+                <a href="https://sebframpton.github.io/Interactive-Card-Details-Form/" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/sebframpton/Change-bg-colour">
+                <a href="https://github.com/sebframpton/Interactive-Card-Details-Form">
 
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
