--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ h1 {
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/desktop-preview.jpg" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
