--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@ h1 {
             <div class="work__text">
               <h3>Interactive Card Details Form</h3>
               <p>
-              - Fill in the form and see the card details update in real-time
-- Receive error messages when the form is submitted if:
-  - Any input field is empty
-  - The card number, expiry date, or CVC fields are in the wrong format
-- View the optimal layout depending on their device's screen size
-- See hover, active, and focus states for interactive elements on the page
+              - Fill in the form and see the card details update in real-time.<br>
+- Receive error messages when the form is submitted if:<br>
+  - Any input field is empty.<br>
+  - The card number, expiry date, or CVC fields are in the wrong format.<br>
+- View the optimal layout depending on their device's screen size.<br>
+- See hover, active, and focus states for interactive elements on the page.<br>
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -131,7 +131,7 @@ h1 {
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/desktop-preview.jpg" class="work__image" alt="Project 3" />
+              <img src="./images/Card-Animation.gif" class="work__image" alt="Card Animation" />
             </div>
           </div>
 		
@@ -185,7 +185,7 @@ h1 {
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/project-2.png" class="work__image" alt="Project 2" />
             </div>
           </div>
 
