--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@ h1 {
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Plant Shop</h3>
+              <h3>Library Template</h3>
               <p>
-                A plant shop for gardeners to purchase gardening products or plants.
+                A library website displaying library art and design books.
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -176,16 +176,16 @@ h1 {
               </ul>
 
               <div class="work__links">
-                <a href="https://sebframpton.github.io/Plant-Shop/" class="link__text">
+                <a href="https://sebframpton.github.io/Library-Project/" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/sebframpton/Plant-Shop">
+                <a href="https://github.com/sebframpton/Library-Project">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 2" />
+              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -220,8 +220,6 @@ h1 {
               I'm a passionate web designer and developer. 
 			  I enjoy working on all types of projects, big or small.
             </p>
-            <!-- Provide a link to your resume -->
-            <a href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:b5aeb463-ece5-39f0-93a5-c070e7831ac3" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
