--- a/index.html
+++ b/index.html
@@ -137,22 +137,30 @@ h1 {
 		
           <div class="work__box">
             <div class="work__text">
-              <h3>Library Template</h3>
+              <h3>To Do App</h3>
               <p>
-                A library website displaying library art and design books.
+               Users should be able to:<br>
+- View the optimal layout for the app depending on their device's screen size<br>
+- See hover states for all interactive elements on the page<br>
+- Add new todos to the list<br>
+- Mark todos as complete<br>
+- Delete todos from the list<br>
+- Filter by all/active/complete todos<br>
+- Clear all completed todos<br>
+- Toggle light and dark mode<br>
+- Bonus: Drag and drop to reorder items on the list<br>
               </p>
               <ul class="work__list">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
-                <li>Foundation</li>
               </ul>
 
               <div class="work__links">
-                <a href=" https://sebframpton.github.io/Library-Project/" target="_blank" class="link__text">
+                <a href="https://sebframpton.github.io/To-Do-List-App/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/sebframpton/Library-Project" title="View Source Code" target="_blank">
+                <a href="https://github.com/sebframpton/To-Do-List-App" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
