--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ h1 {
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/desktop-preview.jpg" class="work__image" alt="Project 1" />
+              <img src="./images/Todo-Animation.gif" class="work__image" alt="Project 1" />
             </div>
           </div>
 
