--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@ h1 {
               <h3>To Do App</h3>
               <p>
                Users should be able to:<br>
-- View the optimal layout for the app depending on their device's screen size<br>
-- See hover states for all interactive elements on the page<br>
-- Add new todos to the list<br>
-- Mark todos as complete<br>
-- Delete todos from the list<br>
-- Filter by all/active/complete todos<br>
-- Clear all completed todos<br>
-- Toggle light and dark mode<br>
-- Bonus: Drag and drop to reorder items on the list<br>
+- View the optimal layout for the app depending on their device's screen size.<br>
+- See hover states for all interactive elements on the page.<br>
+- Add new todos to the list.<br>
+- Mark todos as complete.<br>
+- Delete todos from the list.<br>
+- Filter by all/active/complete todos.<br>
+- Clear all completed todos.<br>
+- Toggle light and dark mode.<br>
+- Bonus: Drag and drop to reorder items on the list.<br>
               </p>
               <ul class="work__list">
                 <li>HTML</li>
