--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
 
-  <!-- Put your site title here -->
   <title>
     Sebastian Frampton | A Web Developer based in Perth, Australia.
   </title>
 
   <meta name="description" content="I'm a web developer from Perth.">
-  <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
+
   <meta name="keywords" content="Sebastian Frampton, HTML CSS JS PHP WordPress and some coding keywords" />
   <link rel="stylesheet" href="index.css" />
 </head>
@@ -74,7 +73,7 @@ h1 {
     <div class="header__text-box row">
       <div class="header__text">
         <h1 class="heading-primary">
-          <!-- Replace the following name with your name -->
+
           <span class="animate-charcter">Sebastian Frampton</span>
         </h1>
 		<div class="container">
@@ -84,7 +83,7 @@ h1 {
     </div>
   </div>
 </div>
-        <!-- Put a small paragraph about yourself -->
+
 		
         <a href="#contact" class="btn btn-touch">Get in touch</a>
       </div>
@@ -96,7 +95,7 @@ h1 {
 
     <!-- ***** Work ***** -->
 
-    <section class="work" id="work">
+    <section class="project" id="project">
       <div class="row">
         <h2>My Projects</h2>
         <div class="work__boxes">
