--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h1 {
 
     <!-- ***** Work ***** -->
 
-    <section class="project" id="project">
+    <section class="projects" id="projects">
       <div class="row">
         <h2>My Projects</h2>
         <div class="work__boxes">
